--- a/main/main.css
+++ b/main/main.css
@@ -7,40 +7,6 @@ body{
     display: none;
 }
 
-.grid-container{
-    display: flex;
-    overflow: hidden;
-    height: 100%;
-    margin: 5%;
-    border-radius: 2%;
-    border: 2px solid transparent;
-    justify-content: center;
-    background-color: rgb(122 168 207 / 80%);
-    align-items: center;
-    grid-column: 2 / span 2;
-    grid-row: 2 / span 3;
-    flex-direction: column;
-}
-
-
-p{
-    color: rgb(0, 0, 0);
-    font-size: 1.5rem;
-}
-
-.wrapper{
-    height: 100vh;
-    background-image: url("../resources/image.gif");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    display: grid;
-    align-items: center;
-    justify-content: center;
-    grid-template-columns: 25% 25% 25% 25%;
-    grid-template-rows: 10% auto auto auto;
-}
 
 .navbar{
     width: 100%;
@@ -81,13 +47,53 @@ li a:hover {
     background-color: #111;
 }
 
-img{
-    max-width: 100%;
-    max-height: 100%;
-    align-self: center;
+.grid-container{
+    display: flex;
+    overflow: hidden;
+    height: 100%;
+    margin: 5%;
+    border-radius: 2%;
+    border: 2px solid transparent;
+    justify-content: flex-start;
+    background-color: rgba(91, 95, 98, 0.0);
+    align-items: center;
+    grid-column: 1 / span 4;
+    grid-row: 2 / span 3;
+    flex-direction: column;
+    row-gap: 1%;
 }
 
-form{
-    display: flex;
-    flex-direction: column;
+.wrapper{
+    height: 100vh;
+    background-image: url("../resources/image.gif");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-rows: 10% auto auto auto;
+}
+
+.row {
+    display: grid;
+    height: 33.3%;
+    grid-template-columns:25% 25% 25% 25%;
+    align-items: center;
+    column-gap: 0.2%;
+}
+
+img{
+    border-radius: 1.5%;
+}
+
+p{
+    font-weight: bold;
+    font-size: 2em;
+    grid-column: 1 / span 4;
+    font-family: 'ADLaM Display';    color: aliceblue;
+    background: #333333;
+    border-radius: 1%;
 }
