--- a/index/index.css
+++ b/index/index.css
@@ -8,18 +8,76 @@ body{
 }
 
 .grid-container{
-    display: flex;
+    display: grid;
     overflow: hidden;
     height: 100%;
     margin: 5%;
     border-radius: 2%;
     border: 2px solid transparent;
-    justify-content: center;
-    background-color: rgb(122 168 207 / 80%);
-    align-items: center;
+    grid-template-columns: 50% 50% ;
+    grid-template-rows:20% 60% 20% ;
+    background-color: rgb(82 57 145 / 54%);
     grid-column: 2 / span 2;
     grid-row: 2 / span 3;
-    flex-direction: column;
+}
+
+.grid-container div:nth-child(1){
+    width: 100%;
+    height: 20%;
+    display: flex;
+    justify-content: center;
+    grid-column: 1 / span 2;
+    grid-row: 1 / span 2;
+}
+
+.grid-container div:nth-child(2){
+    width: 100%;
+    justify-self: center;
+    align-self: center;
+    grid-column: 1 / span 2;
+    grid-row: 2/ span 1;
+}
+
+.button {
+    background-color: #04AA6D; /* Green */
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 2%;
+    margin-bottom: 10%;
+    width: 50%;
+    align-self: center;
+    justify-self: center;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    grid-row: 3 ;
+    border-radius: 5%;
+}
+
+.button1 {
+    background-color: rgba(255, 255, 255, 0.11);
+    color: black;
+    border: 2px solid #04AA6D;
+}
+
+.button1:hover {
+    background-color: #04AA6D;
+    color: white;
+}
+
+.button2 {
+    background-color: white;
+    color: black;
+    border: 2px solid #008CBA;
+}
+
+.button2:hover {
+    background-color: #008CBA;
+    color: white;
 }
 
 
@@ -90,4 +148,9 @@ img{
 form{
     display: flex;
     flex-direction: column;
+}
+
+h1{
+    color: #ffffff;
+    margin: 5%;
 }
