--- a/index/index.css
+++ b/index/index.css
@@ -61,25 +61,13 @@ body{
 .button1 {
     background-color: rgba(255, 255, 255, 0.11);
     color: black;
-    border: 2px solid #04AA6D;
+    border: 2px solid #f1c679;
 }
 
 .button1:hover {
-    background-color: #04AA6D;
+    background-color: #f1c679;
     color: white;
 }
-
-.button2 {
-    background-color: white;
-    color: black;
-    border: 2px solid #008CBA;
-}
-
-.button2:hover {
-    background-color: #008CBA;
-    color: white;
-}
-
 
 p{
     color: rgb(0, 0, 0);
