--- a/index/index.css
+++ b/index/index.css
@@ -23,7 +23,7 @@ body{
 
 .grid-container div:nth-child(1){
     width: 100%;
-    height: 20%;
+    height:30%;
     display: flex;
     justify-content: center;
     grid-column: 1 / span 2;
@@ -108,7 +108,7 @@ ul {
 }
 
 .active {
-    background-color: #04AA6D;
+    background-color: #ffcc89;
 }
 
 li {
