--- a/login_register/admin.css
+++ b/login_register/admin.css
@@ -186,7 +186,7 @@ body{
 .icon{
   width: 25%;
   height: 25%;
-  background-image: url("../resources/icon1jpg.jpg");
+  background-image: url("../resources/icon1.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
