--- a/main/main.css
+++ b/main/main.css
@@ -96,6 +96,10 @@ img:hover{
     width: 110%;
 }
 
+#btn{
+    border: transparent;
+    background-color: transparent;
+}
 p{
     font-weight: bold;
     font-size: 2em;
