--- a/index.css
+++ b/index.css
@@ -76,7 +76,7 @@ p{
 
 .wrapper{
     height: 100vh;
-    background-image: url("../resources/image.gif");
+    background-image: url("resources/image.gif");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
