--- a/admin/admin.css
+++ b/admin/admin.css
@@ -88,7 +88,7 @@ li a:hover {
 
 .wrapper{
     height: 100vh;
-    background-image: url("../resources/image.gif");
+    background-image: url("../resources/background.gif");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
