--- a/main/main.css
+++ b/main/main.css
@@ -1,4 +1,4 @@
-body{
+ body{
     margin:0;
     min-height: 100%;
 }
@@ -65,7 +65,7 @@ li a:hover {
 
 .wrapper{
     height: 100vh;
-    background-image: url("../resources/image.gif");
+    background-image: url("../resources/background.gif");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
